@@ -1,3 +1,6 @@
+6 March 2007
++ Trying different method of getting branch dsn.
+
 5 March 2007
 + Changed control panel icon
 
